# 3dNovac

./: .gitignore  CMakeLists.txt  Callback.cpp  Callback.h  ClientState.cpp  Connection.h  Define.h  FlowControl.cpp  KyotoTycoon.cpp  KyotoTycoon.h  Layer.cpp  Layer.h  Mongo.cpp  Mongo.h  Packet.h  ReliableLayer.h  TcpConnection.h  TlsConnection.cpp  TlsConnection.h  UdpConnection.h  readme.txt  test.txt
Examples/: BinaryTree.cpp  CMakeLists.txt  GraphNode.cpp  SpriteSheet.desc  Tuto_NcCore_Client.cpp
Examples/Tuto1/: GameEngine.cpp  GameEngine.h  main.cpp
Examples/Tuto_NcCore_Client/: main.cpp
Examples/Tuto_NcCore_Server/: Client.h
Math/: Math.h  (+7 more)
Nc/Audio/: Audio.h  CMakeLists.txt  Define.h  Engine.cpp  Engine.h
Nc/Contrib/: BasicMeshCreator.cpp  BasicMeshCreator.h  CMakeLists.txt  Contrib.h  Define.h  GameEngine.cpp  GameEngine.h  LightingMaterial.cpp  LightingMaterial.h  LightingMaterialConfig.cpp  LightingMaterialConfig.h  bSplines.cpp  bSplines.h
Nc/Core/: CMakeLists.txt  Core.h  Debug.h  Define.h  README.md
Nc/Core/Engine/: EventManager.cpp  EventManager.h  Handler.cpp  Handler.h  IContext.h  IEngine.cpp  IEngine.h  MainEngine.cpp  MainEngine.h  Manager.cpp  Manager.h
Nc/Core/Graph/: BinaryNode.h  BinaryTree.h  DotGraph.h  INodePolitic.h  NNodePolitic.h  Node.h  NodeVisitor.h  Octree.h
Nc/Core/Math/: Array.h  Box.h  Box2D.h  Box3D.h  Math.cpp  Math.h  Matrix.h  Matrix4x4.h  Pixel.h  Plane.h  Quaternion.cpp  Test.cpp  Test.h  Vector.h  Vector2D.h  Vector3D.h
Nc/Core/Network/: ISocket.cpp  ISocket.h  Ip.cpp  Ip.h  Select.cpp  Select.h  SocketTcp.cpp  SocketTcp.h  SocketUdp.cpp  SocketUdp.h
Nc/Core/System/: Config.cpp  Config.h  Object.cpp  Object.h  Plugin.cpp  Plugin.h  PluginLoader.h  System.h
Nc/Core/System/API/: API.cpp  API.h  IMutex.h  IThread.h  Locker.cpp  Locker.h
Nc/Core/Utils/: Clock.h  Convert.h  Convert.tpl  Daemonizer.cpp  Daemonizer.h  Exception.h  FileName.cpp  FileName.h  IFileFormat.h  IntrusiveSmartPointer.h  Logger.cpp  Logger.h  Mask.h  Metaprog.h  NonCopyable.h  PerThreadSingleton.h  Singleton.h  SmartPointer.h  TagManager.h  Unicode.cpp  Unicode.h  Utils.h  VTableManager.h  Visitable.h  VisitorManager.h  include.cpp
Nc/Graphics/: CMakeLists.txt  Define.h  Engine.cpp  Engine.h  Graphics.cpp  Graphics.h
Nc/Graphics/Camera/: Camera.cpp  Camera.h  Camera2d.cpp  Camera2d.h  Camera3d.cpp  Camera3d.h  StandardCamera3d.cpp  StandardCamera3d.h
Nc/Graphics/Context/: GLContext.cpp  GLContext.h  GLXContext.cpp  GLXContext.h  WGLContext.cpp  WGLContext.h
Nc/Graphics/Core/: DefaultVertexType.cpp  DefaultVertexType.h  Drawable.cpp  Drawable.h  Font.cpp  Font.h  FontLoader.h  FontLoaderFreeType.cpp  FontLoaderFreeType.h  GL.h  ITextFormater.h  Image.cpp  Image.h  ImageLoader.h  ImageLoaderPng.cpp  ImageLoaderPng.h  MaterialConfig.h  PlainTextFormater.cpp  PlainTextFormater.h  SpriteSheet.cpp  SpriteSheet.h
Nc/Graphics/Data/: Font.cpp  Font.h  FontLoader.h  FontLoaderFreeType.cpp  FontLoaderFreeType.h  ITextFormater.h  Image.cpp  Image.h  ImageLoader.h  ImageLoaderPng.cpp  ImageLoaderPng.h  PlainTextFormater.cpp  PlainTextFormater.h  SpriteSheet.cpp  SpriteSheet.h
Nc/Graphics/Effect/: Animation.h  Billboard.cpp  Billboard.h  CameraEffect.cpp  CameraEffect.h  DefaultLightingMaterial.cpp  DefaultLightingMaterial.h  Effect.h  FramesAnimation.h  LightingEffect.cpp  LightingEffect.h  MatrixAnimation.cpp  MatrixAnimation.h  RasterEffect.cpp  RasterEffect.h  SpriteAnim.cpp  SpriteAnim.h
Nc/Graphics/GL/: Blend.cpp  Blend.h  DataBuffer.h  DefaultVertexType.cpp  DefaultVertexType.h  Drawable.cpp  Drawable.h  Enum.h  Extension.cpp  Extension.h  FrameBuffer.cpp  FrameBuffer.h  GL.h  GLObject.cpp  GLObject.h  GeometryBuffer.h  IndexBuffer.cpp  IndexBuffer.h  MaterialConfig.h  Program.cpp  Program.h  RasterMode.cpp  RasterMode.h  RenderBuffer.cpp  RenderBuffer.h  Shader.cpp  Shader.h  State.cpp  State.h  Texture.cpp  Texture.h  Uniform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexDescriptor.cpp  VertexDescriptor.h
Nc/Graphics/Input/: SubWindowInput.cpp  SubWindowInput.h  WWindowInput.cpp  WWindowInput.h  WindowInput.cpp  WindowInput.h  XWindowInput.cpp  XWindowInput.h
Nc/Graphics/Material/: BasicSourceShader.cpp  BasicSourceShader.h  BasicVertexType.cpp  BasicVertexType.h  DefaultLightingMaterial.cpp  DefaultLightingMaterial.h  DefaultMaterials.cpp  DefaultMaterials.h  DefaultSourceShader.cpp  DefaultSourceShader.h  DefaultVertexType.cpp  DefaultVertexType.h  Drawable.cpp  Drawable.h  FactoryDefaultMaterials.cpp  FactoryDefaultMaterials.h  IMaterial.h  LightingMaterial.h  Material.h  MaterialConfig.h  ProgrammableMaterial.cpp  ProgrammableMaterial.h
Nc/Graphics/Object/: BasicMeshCreator.cpp  BasicMeshCreator.h  BoundingBox.cpp  BoundingBox.h  Drawable.h  Object.cpp  Object.h  ObjectContainer.cpp  ObjectContainer.h  SkyBox.cpp  SkyBox.h  Sprite.cpp  Sprite.h  String.cpp  String.h  Text.cpp  Text.h
Nc/Graphics/Scene/: Basic3dSceneGraph.cpp  Basic3dSceneGraph.h  Controller.h  Entity.cpp  Entity.h  I2dSceneGraph.cpp  I2dSceneGraph.h  I3dSceneGraph.cpp  I3dSceneGraph.h  ISceneGraph.h  ISceneNodeFormatPlugin.h  RenderingController.h  SceneGraph.cpp  SceneGraph.h  SceneGraphManager.cpp  SceneGraphManager.h  SceneNode.cpp  SceneNode.h  SceneNodeFormatManager.cpp  SceneNodeFormatManager.h  SceneNodeFormatPlugin.h  SceneNodeVisitor.h  UpdatingController.h  Visitors.h
Nc/Graphics/SpacePartitioning/: Octree.cpp  Octree.h  SubTree.h
Nc/Graphics/Window/: ICursor.h  IWindow.cpp  IWindow.h  SubWindow.cpp  SubWindow.h  WCursor.cpp  WCursor.h  WWindow.cpp  WWindow.h  Window.cpp  Window.h  XCursor.cpp  XCursor.h  XWindow.cpp  XWindow.h
Nc/Net/: CMakeLists.txt  Callback.cpp  Callback.h  ClientState.h  Define.h  FlowControl.h  Layer.h  Mongo.h  Packet.h  README.md  ReliableLayer.cpp  ReliableLayer.h  TcpConnection.cpp  UdpConnection.cpp  UdpConnection.h
Plugin/FileFormatCollada/: CMakeLists.txt  Define.h  FileFormatCollada.bmarks  FileFormatCollada.cbp  FileFormatCollada.layout  Plugin.cpp  Plugin.h  Triangulate.cpp  Triangulate.h  main.cpp
(+453 files in other folders)
